procedural music generator added.
